# udesa-pc-tutorial

./: .gitignore  pyproject.toml  readme.md
1-rock-paper-scissors/: resolution.md
2-sequences/: summary.md
2022-a/1-rock-paper-scissors/: main.py
2022-a/2-sequences/: warmup.md
2022-a/3-state-machine/: readme.md  url_parsing.py
2022-a/4-testing_and_train/: tests.py
2022-a/5-recursion/: statement.md
2022-a/7-POO/: fundamentals.md
2022-b/1-operaciones/: clase_3_e1.py  clase_3_e2.py  clase_3_e3.py  clase_3_e4.py  clase_4_e1.py  readme.md
2022-b/14-files/: ejercicio_1.py  ejercicio_3.py
2022-b/17-search/: binary_search.py
2022-b/18-recursion/: balance_eq.py  ejercicio_1.py  ejercicio_2.py  ejercicio_4.py  gen_seq.py  merge_lists.py
2022-b/19-ordenamiento/: merge_sort.py
2022-b/2-ciclos/: guia_6_e1.py  guia_6_e3.py
2022-b/2-condicionales/: guia_cond_e_10.py
2022-b/21-oop/: 1-email.py  2-email-generic.py  course-admin.py
2022-b/22-OOP/: map.py
2022-b/22-OOP advance/: map.py
2022-b/23-OOP/: creatures.py  map.py
2022-b/24-OOP/: board_piece.py  creatures.py  creatures_interface.py  game_engine.py  (+2 more)
3-state-machine/: resolution.md
5-recursion/: readme.md  statement.md
6-todo-list/: readme.md  resolution.md
7-POO/: readme.md
docs/: readme.md
mini-proyectos/: mission_control.py  readme.md
poo/: fundamentals.md
recursion/: statement.md
rock-paper-scissors/: main.py  readme.md
sequences/: readme.md
state-machine/: info.md  state_machine_simple.py
testing_and_train/: readme.md  statement.md  tests.py
todo-list/: readme.md
(+86 files in other folders)
