[tool.poetry]
name = "ejemplos-de-clase"
version = "0.1.0"
description = "Ejemplos dados en clase para Pensamiento Computacional"
authors = ["Santiago Bassani <sbassani@udesa.edu.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.13"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
